Fixed the issue with the reports converting Integers to Floats