@@ -75,7 +75,7 @@ public class ScoreableEntity extends BaseEntity implements Comparable<ScoreableE
     public Float getScoreAsFloat(){
         Float fScore = null;
         if(score != null){
-            fScore = new Float((this.getScore()==null) ? 0 : this.getScore() / 10.0);
+            fScore = Float.valueOf((float)(this.getScore()==null ? 0 : this.getScore() / 10.0));
         }
         
         return fScore;
